--- a/12Mart2022/Web.config
+++ b/12Mart2022/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,9 +17,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  <authentication mode="Forms">
-		  <forms loginUrl="Security/Login"> </forms>
-	  </authentication>
+    <authentication mode="Forms">
+      <forms loginUrl="Security/Login"></forms>
+    </authentication>
+	  <roleManager enabled="true" defaultProvider="testRoleProvider">
+		  <providers>
+			  <add name="testRoleProvider" type="_12Mart2022.Security.PersonelRoleProvider"/>
+		  </providers>
+	  </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -44,7 +49,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="mysqlEntities" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=mysql;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="mysqlEntities" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;initial catalog=MyNewWork;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
